--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 header {
@@ -19,10 +21,11 @@ header p {
 }
 
 main {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 footer {
